ch7-gatekeeper-k8s/examples/multi-tenant-isolation/validate/constraints/0-denyall-pods.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: deny-all-namespaces
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "tenant1"
