ch7-gatekeeper-k8s/examples/multi-tenant-isolation/validate/constraints/1-dep-toleration-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredTolerationDep
metadata:
  name: deployment-toleration
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - "tenant1"
  parameters:
    ops: ["CREATE","UPDATE"]
    tolerations:
    - effect: NoSchedule
      key: tenant
      operator: Equal
      value: tenant1
    errMsg: "INVALID_DEPLOYMENT_TOLERATIONS"
