ch7-gatekeeper-k8s/examples/multi-tenant-isolation/validate/constraints/2-pod-toleration-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredTolerationPod
metadata:
  name: pod-toleration
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "tenant1"
  parameters:
    ops: ["CREATE","UPDATE"]
    tolerations:
    - effect: NoSchedule
      key: tenant
      operator: Equal
      value: tenant1
    errMsg: "INVALID_POD_TOLERATIONS"
