ch7-gatekeeper-k8s/examples/multi-tenant-isolation/validate/constraints/3-dep-nodeaffinity-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNodeAffinityDep
metadata:
  name: dep-node-affinity
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - "tenant1"
  parameters:
    ops: ["CREATE","UPDATE"]
    errMsg: "INVALID_DEPLOYMENT_NODEAFFINITY"
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: tenant
            operator: In
            values:
            - tenant1
