ch7-gatekeeper-k8s/examples/multi-tenant-isolation/validate/constraints/4-pod-nodeaffinity-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNodeAffinityPod
metadata:
  name: pod-node-affinity
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "tenant1"
  parameters:
    ops: ["CREATE","UPDATE"]
    errMsg: "INVALID_POD_NODEAFFINITY"
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: tenant
            operator: In
            values:
            - tenant1
